# PatientJournals

./: .gitignore  README.md  batch_client.py  batch_retrieve.py  batch_status.py  batch_submit.py  check_models.py  classes.py  config.py  date_mapping.csv  environment.yml  generate.py  generation_spec.py  local_model_client.py  main.py  models.py  output_handler.py  preprocess.py  pyproject.toml  response_parsing.py  schemas.py  tasks.py  tools.py  upload.py  validate.py  validation_analysis.py
data/: .gitkeep
runs/20251224_010851/: config_snapshot.py  dataset.csv  metadata.json
runs/20260114_142340/: config_snapshot.py  dataset.csv  metadata.json
runs/20260115_161302/: 20260115_161302_dataset.jsonl  config_snapshot.py  metadata.json
runs/20260123_152054/: 20260123_152054_dataset.jsonl  config_snapshot.py  metadata.json
runs/20260124_183240/: 20260124_183240_dataset.jsonl  metadata.json
runs/20260124_194714/: 20260124_194714_dataset.jsonl  metadata.json
runs/20260126_093939/: 20260126_093939_dataset.jsonl  metadata.json
runs/20260126_100457/: 20260126_100457_dataset.jsonl  metadata.json
runs/20260126_134007/: 20260126_134007_dataset.jsonl  metadata.json
tests/: test_app_architecture.py  test_app_workflows.py  test_batch_client.py  test_batch_output_collection.py  test_batch_retrieve_recovery.py  test_batch_service.py  test_batch_status.py  test_batch_submit_inputs.py  test_config.py  test_data_inspection.py  test_dataset_coverage.py  test_output_handler.py  test_run_layout.py  test_tasks.py  test_tools.py  test_validation_sampling.py
(+67 files in other folders)
